--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,3 +5,6 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "seamless-remote"
 version = "0.0.0"
+
+[tool.setuptools]
+script-files = ["bin/seamless-resolve"]
